--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,5 @@
 @import "ie-fix";
 
 @import "../views/Camera/Live/camera-live";
+@import "../components/CardPicture/card-picture";
+@import "../views/Camera/Gallery/gallery";
