Visualize drone path on the map

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,3 +16,5 @@
 @import "../views/Camera/Live/camera-live";
 @import "../components/CardPicture/card-picture";
 @import "../views/Camera/Gallery/gallery";
+@import "../views/Geolocation/List/sessions";
+@import "../views/Geolocation/Map/map";
