UI of drone controller designed completely

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,3 +18,5 @@
 @import "../views/Camera/Gallery/gallery";
 @import "../views/Geolocation/List/sessions";
 @import "../views/Geolocation/Map/map";
+@import "../components/DroneController/drone-controller";
+
