--- a/src/views/Camera/Gallery/gallery.scss
+++ b/src/views/Camera/Gallery/gallery.scss
@@ -1,3 +1,18 @@
+.gallery-header {
+  border-top: solid 2px #63c2de;
+  border-bottom: solid 2px #63c2de;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 5px 0;
+  .pictures-count {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
+
 .modal-view-picture {
   max-width: 1000px;
   .modal-body {
